<resources>
    <string name="app_name">Motiv</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_hint">+7 (_ _ _) -_ _ _-_ _-_ _</string>
    <string name="enter_button">Войти</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="send_sms">Получить пароль по SMS</string>
    <string name="blankText">N/A</string>
    <string name="get_pass">Получить пароль</string>
    <string name="passFromSms">Пароль из смс</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rub_value">₽</string>
    <string name="enter_email">Укажите e-mail</string>
    <string name="exchange">Обменяйте</string>
    <string name="getGB">Получайте</string>
    <string name="btnEx">Обменять</string>
    <string name="BlockDefText">Вы можете заблокировать номер на 30 дней, по истечении срока – номер будет отключен</string>
    <string name="UnblockDefText">Для разблокировки номера необходимо ввести кодове слово</string>
    <string name="isDetalDescText">Скоро здесь будет информация о ваших расходах в реальном времени. А пока вы можете заказать детализацию на email</string>
    <string name="isNotDetalDescText">Скоро здесь будет информация о ваших расходах в реальном времени.</string>
    <string name="version_app">Версия </string>
    <string name="ask_question">Если у вас есть вопросы,\n вы можете задать их в чате</string>
    <string name="phone_number_support_service">8 800 240 0000</string>
    <string name="call_is_free">Звонок бесплатный</string>
    <string name="enter_code">Введите код для входа</string>
    <string name="about_tariff">О тарифе</string>
    <string name="offices_motiv">Офисы Мотив</string>
    <string name="support">Поддержка</string>
    <string name="help">Помощь</string>
    <string name="questions_and_answers">Вопросы и Ответы</string>
    <string name="category_name">Category Name</string>
    <string name="question">Вопрос</string>
</resources>
