<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".fragments.LoginFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_vertical_guideline"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTextInputPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:hint="@string/phone_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_vertical_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPhone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:digits="1234567890+- "
            android:ems="10"
            android:inputType="phone"
            android:maxLength="18"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_vertical_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/layoutTextInputPhone"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAuth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/enter_button"
        android:background="@drawable/oval_button"
        android:textColor="@color/cardview_light_background"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_vertical_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/layoutTextInput"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="39dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="39dp" />

    <TextView
        android:id="@+id/tvSendSms"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/send_sms"
        android:textColor="#fa6600"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_vertical_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonAuth"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tvAuthErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/blankText"
        android:textColor="#fa6600"
        android:visibility="gone"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_vertical_guideline"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/layoutTextInput"
        app:layout_constraintVertical_bias="0" />
</androidx.constraintlayout.widget.ConstraintLayout>