<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    tools:context=".fragments.main.HelpFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="70dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="70dp" />

    <ImageView
        android:id="@+id/help_logo"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/version_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:lines="1"
        android:text="@string/version_app"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toBottomOf="@+id/help_logo" />

    <TextView
        android:id="@+id/tv_ask_question"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="80dp"
        android:lines="2"
        android:text="@string/ask_question"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toBottomOf="@+id/version_app" />

    <TextView
        android:id="@+id/request_install_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Для этого установите приложение\n Whatsapp или Viber\n или позвоните по номеру"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toBottomOf="@+id/tv_ask_question" />

    <TextView
        android:id="@+id/tv_phone_number_support_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/phone_number_support_service"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toBottomOf="@+id/request_install_app" />

    <TextView
        android:id="@+id/tv_call_is_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/call_is_free"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_number_support_service" />

    <View
        android:id="@+id/delimiter"
        android:layout_width="1dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:background="@color/mtrl_textinput_default_box_stroke_color"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/bt_viber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_whatsapp"
        app:layout_constraintTop_toBottomOf="@+id/tv_ask_question" />

    <ImageView
        android:id="@+id/bt_whatsapp"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="34dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/delimiter"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toBottomOf="@+id/request_install_app"
        app:srcCompat="@drawable/ic_whatsapp" />

    <ImageView
        android:id="@+id/bt_viber"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="34dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintStart_toEndOf="@+id/delimiter"
        app:layout_constraintTop_toBottomOf="@+id/request_install_app"
        app:srcCompat="@drawable/ic_viber" />

</androidx.constraintlayout.widget.ConstraintLayout>